--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,43 @@
 .row {
     height: 150px;
     text-align: center;
-    justify-content: center;
+    
 
 }
 
+
+
 [class*="col"] {
     background: hsl(333, 55%, 85%);
-    border: 1px black solid
+    border: 1px black solid;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
     
   
 }
 
 .pink{
     background-color: rgb(248, 121, 142);
-    height: 140px;
+    height: 150px;
     padding: 5px;
+    border: 1px white solid;
    
+}
+
+.col{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.nested{
+    margin: 3px;
+}
+
+.block{
+    display: block;
 }
 
